<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/action_bar_height">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_mid"
            android:layout_marginBottom="@dimen/space_large"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/size_avatar_huge"
                android:layout_height="@dimen/size_avatar_huge"
                android:src="@drawable/avatar_user_default"
                android:layout_marginBottom="@dimen/space_small"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_device_tip"
                android:textColor="@color/textAlphaGray"
                android:textSize="@dimen/text_small"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_new_user"
            style="@style/MenuGroup">

            <LinearLayout style="@style/MenuItem">

                <TextView
                    style="@style/MenuItemText"
                    android:text="@string/login_with_new_id" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/MenuGroup">

            <LinearLayout
                android:id="@+id/login_with_device"
                style="@style/MenuItem">

                <TextView
                    style="@style/MenuItemText"
                    android:text="@string/login_with_other_device" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_with_phone"
                style="@style/MenuItem">

                <TextView
                    style="@style/MenuItemText"
                    android:text="@string/login_with_phone_number" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/item_set_site_ip"
            style="@style/cellLayoutStyle"
            android:visibility="gone">

            <TextView
                style="@style/cellTxtStyle"
                android:text="修改平台IP(test)" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space_mid"
            android:layout_marginEnd="@dimen/space_mid">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:clickable="false"
                android:enabled="false"
                android:scaleX="0.7"
                android:scaleY="0.7"/>

            <TextView
                android:id="@+id/user_agreement_md"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/checkbox"
                android:layout_centerVertical="true"
                android:text="@string/agreement"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_small" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
