<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/space_mid">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_edit_row"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/ZalyEditText">

                    <EditText
                        android:id="@+id/phone_edit"
                        style="@style/Widget.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_phone"
                        android:inputType="phone"
                        android:maxLength="11"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/get_code"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:backgroundTint="@color/button_tint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/send_validation_code"
                    android:textSize="@dimen/text_small"
                    android:theme="@style/Widget.Button"
                    tools:enabled="false"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/code_edit_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ZalyEditText">

                <EditText
                    android:id="@+id/code_edit"
                    style="@style/Widget.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/validation_code"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/submit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/space_mid"
                android:gravity="center"
                android:text="@string/action_login"
                android:textSize="@dimen/text_small"
                android:theme="@style/Widget.Button" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>